# ai-agents-research

./: .gitignore  .markdownlint.json  AGENTS.md  AGENT_LEARNINGS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  lychee.toml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
changelog.d/: .gitkeep  20260622_agentic-memory-taxonomy.md  20260622_cc-native-readme-counts.md  20260622_cc-workflows-observability.md  20260622_cc-workflows-surfaces.md  20260622_context-compression-layer5.md  20260622_gateways-aider.md  20260622_handoff-followups.md  20260622_output-validation-section.md  20260622_protocol-interop.md  20260622_r5-new-targets.md  20260622_rag-embeddings-sqlitevec.md  20260622_rag-rerankers.md  20260622_rowboat-refresh.md  20260622_semantic-layer-data-catalog.md  20260622_stale-fact-refresh.md  20260623_000000_add-requested-sources.md  20260623_agentic-eng-disciplines.md  20260625_add-new-sources.md  20260626_marker-326-datefix.md  20260626_scrapedo-ssot-xref.md  20260627_add-harness-memory-sources.md  20260627_bump-relocated-dates.md  20260627_hermes-simplex-channel.md  20260627_move-code-review-products.md  20260627_move-design-formats.md  20260627_output-verification-guide.md  20260627_relocate-misclassified.md  20260627_relocate-tooling-strays.md  20260627_sources-convention-backfill.md  20260627_spec-frameworks-and-context-cite.md  20260627_workflow-frameworks-landscape.md  20260628_120000_docs_add_squid_multica_olmocr_goose_sources.md  (+35 more)
data/: outage-stats.md  outages.jsonl
(+366 files in other folders)
